<resources>
    <string name="app_name">TaskMaster</string>
    <string name="add_task">Add Task</string>
    <string name="task_description">Task Description</string>
    <string name="do_something">Do something</string>
    <string name="task_title">Task title</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="textview">TextView</string>
    <string name="my_task">My Task</string>
    <string name="submitted">Submitted!</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="my_tasks">My Tasks</string>
    <string name="task_detail">Task Detail</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_praesent_tristique_magna_sit_amet_purus_gravida_faucibus_et_molestie_ac_feugiat_elementum_sagittis_vitae_et_leo_duis_ut_diam_proin_sed_libero_enim_sed_faucibus_dignissim_sodales_ut_eu_sem_duis_at_tellus_at_urna_condimentum_mattis_ultricies_mi_eget_mauris_pharetra_auctor_urna_nunc_id_cursus_metus_aliquam_eleifend_pulvinar_neque_laoreet_suspendisse_interdum_consectetur_libero_id_cursus_in_hac_habitasse_platea_dictumst_faucibus_interdum_posuere_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_dignissim_enim_sit_amet_venenatis_urna_cursus">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent tristique magna sit amet purus gravida. Faucibus et molestie ac feugiat. Elementum sagittis vitae et leo duis ut diam. Proin sed libero enim sed faucibus. Dignissim sodales ut eu sem. Duis at tellus at urna condimentum mattis. Ultricies mi eget mauris pharetra. Auctor urna nunc id cursus metus aliquam eleifend. Pulvinar neque laoreet suspendisse interdum consectetur libero id. Cursus in hac habitasse platea dictumst. Faucibus interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Dignissim enim sit amet venenatis urna cursus.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_added">Task Added!</string>
    <string name="Settings_Button">Change Settings</string>
    <string name="submit">Submit</string>
    <string name="user_settings">User Settings</string>
    <string name="username">Username</string>
    <string name="string_username">Username</string>
    <string name="string_string_username">Username</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="string_enter_a_username">Enter a username</string>
    <string name="task_progress">Task Progress</string>
    <string name="select_team">Select Team</string>
    <string name="email">Email</string>
</resources>