<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#D1BEA4"
    tools:context=".activity.AddTaskActivity">

    <Spinner
        android:id="@+id/addTaskTeamSpinner"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/select_team"
        app:layout_constraintBottom_toTopOf="@+id/addTaskAddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTaskDescpritionTextEdit"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/addTaskTextView1"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="@string/add_task"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addTaskAddTaskButton"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#B1DDE1"
        android:text="@string/add_task"
        android:textColor="#020202"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/addTaskTaskTitleTextEdit"
        android:layout_width="249dp"
        android:layout_height="56dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:hint="@string/task_title"
        android:inputType="textPersonName"
        android:text="@string/my_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTextView1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/addTaskTaskDescpritionTextEdit"
        android:layout_width="243dp"
        android:layout_height="59dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/task_description"
        android:inputType="textPersonName"
        android:text="@string/do_something"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTaskTitleTextEdit"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/addTaskProgressSpinner"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/task_progress"
        app:layout_constraintBottom_toTopOf="@+id/addTaskAddTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/addTaskTeamSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTaskDescpritionTextEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>