<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E1BAA7"
    tools:context=".activity.MyTasksActivity">

    <Button
        android:id="@+id/allTasksAdTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#B1DDE1"
        android:text="Ad Test"
        android:textColor="#070707"
        app:layout_constraintBottom_toTopOf="@+id/myTasksAllTasksButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myTasksSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B1DDE1"
        android:text="Sign Up"
        android:textColor="#070707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myTasksTitleTextView"
        android:layout_width="188dp"
        android:layout_height="99dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="@string/my_tasks"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Username string" />

    <Button
        android:id="@+id/myTasksAddTaskButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#B1DDE1"
        android:text="@string/add_task"
        android:textColor="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/myTasksAllTasksButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="#B1DDE1"
        android:text="@string/all_tasks"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/myTasksAddTaskButton" />

    <ImageButton
        android:id="@+id/myTasksSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/submitted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="ImageContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myTasksRecyclerView"
        android:layout_width="387dp"
        android:layout_height="203dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/myTasksAddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTasksTitleTextView" />

    <Button
        android:id="@+id/myTasksLogInButton"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B1DDE1"
        android:text="Log In"
        android:textColor="#070707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myTasksLogOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B1DDE1"
        android:text="Log Out"
        android:textColor="#070707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/myTasksBannerAdAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTasksAddTaskButton"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>