<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity">

    <TextView
        android:id="@+id/settingsActivityTitleTextView"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/user_settings"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settingsUsernameEntryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/string_string_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/string_enter_a_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsActivityTitleTextView"
        android:autofillHints="" />

    <Button
        android:id="@+id/settingsUsernameSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:text="@string/submit"
        app:layout_constraintStart_toEndOf="@+id/settingsUsernameEntryEditText"
        app:layout_constraintTop_toBottomOf="@+id/settingsActivityTitleTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>